fixed chat messages not wrapping correctly

--- a/src/pages/chat-page/ChatPage-Style.css
+++ b/src/pages/chat-page/ChatPage-Style.css
@@ -1,54 +1,3 @@
-/* * {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-body {
-  font: 13px Helvetica, Arial;
-}
-form {
-  background: #fff;
-  padding: 3px;
-  bottom: 20;
-  width: 100%;
-  border-color: #000;
-  border-top-style: solid;
-  border-top-width: 1px;
-}
-form input {
-  border-style: solid;
-  border-width: 1px;
-  padding: 10px;
-  width: 85%;
-  margin-right: 0.5%;
-}
-form button {
-  width: 9%;
-  background: rgb(130, 224, 255);
-  border: none;
-  padding: 10px;
-  margin-left: 2%;
-}
-#messages {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-}
-#messages li {
-  padding: 5px 10px;
-}
-#messages li:nth-child(odd) {
-  background: #eee;
-}
-
-.main-div {
-  display: flex;
-  flex-flow: column;
-  height: 100vh;
-  justify-content: space-between;
-} */
-
-
 .chatpage{
   background-color: #f7f7f7;
   width: 100%;
@@ -252,15 +201,13 @@ form button {
   border-radius: 10px;
   max-width: 300px;
   min-width: 120px;
-  /* width: auto; */
-  /* min-height: 50px; */
-  word-break:break-all;
   height: auto;
   font-size: 14px;
   font-weight: 300;
   margin-bottom: 15px;
   background-color: #E3E3E3;
   padding: 10px;
+  white-space: pre-wrap;
 }
 
 .chat__message--me{
